--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
     "version": "1.0.0",
     "description": "A chatbot using AI",
     "main": "server.js",
+    "type": "module",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
-      "axios": "^1.4.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2"
+        "axios": "^1.8.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.21.2",
+        "helmet": "^8.0.0"
     }
-  }
-  
+}
